// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`version basic version 1`] = `
"prisma                : 0.0.0
@prisma/client        : 0.0.0
Computed binaryTarget : TEST_PLATFORM
Operating System      : OS
Architecture          : ARCHITECTURE
Node.js               : NODEJS_VERSION
TypeScript            : TYPESCRIPT_VERSION
Query Engine          : Client Engine (WASM)
PSL                   : @prisma/prisma-schema-wasm CLI_VERSION.ENGINE_VERSION
Schema Engine         : schema-engine-cli ENGINE_VERSION (at sanitized_path/schema-engine-TEST_PLATFORM)
Default Engines Hash  : ENGINE_VERSION
Studio                : STUDIO_VERSION"
`;

exports[`version version with custom Schema Binary 1`] = `
"prisma                : 0.0.0
@prisma/client        : 0.0.0
Computed binaryTarget : TEST_PLATFORM
Operating System      : OS
Architecture          : ARCHITECTURE
Node.js               : NODEJS_VERSION
TypeScript            : TYPESCRIPT_VERSION
Query Engine          : Client Engine (WASM)
PSL                   : @prisma/prisma-schema-wasm CLI_VERSION.ENGINE_VERSION
Schema Engine         : schema-engine-cli ENGINE_VERSION (at sanitized_path/schema-engine-TEST_PLATFORM, resolved by PRISMA_SCHEMA_ENGINE_BINARY)
Default Engines Hash  : ENGINE_VERSION
Studio                : STUDIO_VERSION"
`;

exports[`version version with custom binaries 1`] = `
"prisma                : 0.0.0
@prisma/client        : 0.0.0
Computed binaryTarget : TEST_PLATFORM
Operating System      : OS
Architecture          : ARCHITECTURE
Node.js               : NODEJS_VERSION
TypeScript            : TYPESCRIPT_VERSION
Query Engine          : Client Engine (WASM)
PSL                   : @prisma/prisma-schema-wasm CLI_VERSION.ENGINE_VERSION
Schema Engine         : schema-engine-cli ENGINE_VERSION (at sanitized_path/schema-engine-TEST_PLATFORM, resolved by PRISMA_SCHEMA_ENGINE_BINARY)
Default Engines Hash  : ENGINE_VERSION
Studio                : STUDIO_VERSION"
`;
